[project]
name = "bindl-lib"
version = "1.1.2"
description = ""
authors = [
    {name = "Renato Ramos da Silva",email = "renatoramossilva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "ruff (>=0.12.0,<0.13.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
]
[project.urls]
repository = "https://github.com/renatoramossilva/bindl-lib"

[tool.poetry]
requires-poetry = ">=2.0.1"
packages = [{include = "bindl", from="src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

